[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-huggingface>=0.1.2",
    "langgraph>=0.3.34",
    "mcp>=1.6.0",
    "pymupdf>=1.25.5",
]
